--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -2,3 +2,5 @@
 "Change Layout", "Change Layout"
 "Design Now", "Design Now"
 "Your order", "Your order"
+"Excl. %1 VAT", "Excl. %1% VAT"
+"Incl. %1 VAT", "Incl. %1% VAT"
