--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -2,3 +2,5 @@
 "Change Layout", "Modifier la mise en page"
 "Design Now", "Personnalise"
 "Your order", "Ta commande"
+"Excl. %1 VAT", "Sans %1% TVA"
+"Incl. %1 VAT", "Avec %1% TVA"
