--- a/i18n/de_CH.csv
+++ b/i18n/de_CH.csv
@@ -2,3 +2,5 @@
 "Change Layout", "Layout wechseln"
 "Design Now", "Jetzt gestalten"
 "Your order", "Deine Bestellung"
+"Excl. %1 VAT", "Exkl. %1% MwSt."
+"Incl. %1 VAT", "Inkl. %1% MwSt."
