Update simple legal notice text

--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -2,5 +2,6 @@
 "Change Layout", "Change Layout"
 "Design Now", "Design Now"
 "Your order", "Your order"
-"Excl. %1 VAT", "Excl. %1% VAT"
-"Incl. %1 VAT", "Incl. %1% VAT"
+"All prices incl. VAT, plus shipping costs.", "All prices incl. VAT, plus shipping costs."
+"All prices excl. VAT, plus shipping costs.", "All prices excl. VAT, plus shipping costs."
+
