--- a/i18n/de_AT.csv
+++ b/i18n/de_AT.csv
@@ -2,5 +2,5 @@
 "Change Layout", "Layout wechseln"
 "Design Now", "Jetzt gestalten"
 "Your order", "Deine Bestellung"
-"Excl. %1 VAT", "Exkl. %1% MwSt."
-"Incl. %1 VAT", "Inkl. %1% MwSt."
+"All prices incl. VAT, plus shipping costs.", "Alle Preise inkl. MwSt., zzgl. Versandkosten."
+"All prices excl. VAT, plus shipping costs.", "Alle Preise exkl. MwSt., zzgl. Versandkosten."
