--- a/i18n/ro_RO.csv
+++ b/i18n/ro_RO.csv
@@ -1,7 +1,6 @@
 "Add to Cart", "Adaugă în coș"
-"Change Layout", "Modificați aspectul"
-"Design Now", "Proiectați acum"
-"Your order", "Comanda dvs."
-"All prices incl. VAT, plus shipping costs.", "Toate prețurile includ TVA, la care se adaugă costurile de transport."
-"All prices excl. VAT, plus shipping costs.", "Toate prețurile fără TVA, la care se adaugă costurile de transport."
-
+"Change Layout", "Modificarea designului"
+"Design Now", "Personalizează"
+"Your order", "Comanda ta"
+"All prices incl. VAT, plus shipping costs.", "Toate prețurile includ TVA, plus costurile de transport."
+"All prices excl. VAT, plus shipping costs.", "Toate prețurile nu includ TVA, plus costurile de transport"
