--- a/i18n/pl_PL.csv
+++ b/i18n/pl_PL.csv
@@ -1,7 +1,6 @@
 "Add to Cart", "Dodaj do koszyka"
-"Change Layout", "Zmiana układu"
-"Design Now", "Zaprojektuj teraz"
+"Change Layout", "Zmień szablon"
+"Design Now", "Zaprojektuj"
 "Your order", "Twoje zamówienie"
 "All prices incl. VAT, plus shipping costs.", "Wszystkie ceny zawierają podatek VAT, plus koszty wysyłki."
-"All prices excl. VAT, plus shipping costs.", "Wszystkie ceny bez VAT, plus koszty wysyłki."
-
+"All prices excl. VAT, plus shipping costs.", "Wszystkie ceny bez podatku VAT, plus koszty wysyłki."
